@@ -3,7 +3,6 @@ For 1.4:
 
    Update ad3dsfilter with canExport
 
-   Warn if saving MD2 or MD3 with faces that are not part of a group
    Fix relative paths when saving in a different directory
    Profile 1.3.4 vs. 1.3.5 on unaccelerated config
    Export selected (??)
